[package]
name = "rejex-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.95"
tree-sitter = "0.24.3"
tree-sitter-json = "0.24.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

libtest = { path = "./libtest" }
libsqrt = { path = "./libsqrt" }

[build-dependencies]
cc="*"
